tests/ui/opt_vec_nonpositional.stderr
error: proc-macro derive panicked
  --> $DIR/opt_vec_nonpositional.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: Option<Vec<T>> type is meaningless for positional argument
